<resources>
    <string name="action_select">Select</string>
    <string name="app_downloader">ES Downloader</string>
    <string name="app_image_browser">ES Image Browser</string>
    <string name="app_media_player">ES Media Player</string>
    <string name="app_name">ES File Explorer</string>
    <string name="app_note_editor">ES Note Editor</string>
    <string name="app_zip_viewer">ES Zip Viewer</string>
    <string name="battery_info_remaining_charging_time">"Charging time left: "</string>
    <string name="battery_info_remaining_discharging_time">"Time left: "</string>
    <string name="charging_screen_ad_delete">Delete</string>
    <string name="charging_screen_ad_enter">Open</string>
    <string name="charging_screen_charging_complete">Charge Completed</string>
    <string name="charging_screen_slide_to_enter">Slide to unlock</string>
    <string name="common_time_hour">h</string>
    <string name="common_time_minute">m</string>
    <string name="duappd_ad_item_action_btn">FREE</string>
    <string name="duapps_ad_data_empty">Please come back later.</string>
    <string name="duapps_ad_empty_refresh_btn_check">CHECK</string>
    <string name="duapps_ad_empty_title">EMPTY</string>
    <string name="duapps_ad_footer_end">End</string>
    <string name="duapps_ad_loading">Loading…</string>
    <string name="duapps_ad_loading_switch_google_play_des">Switching to Google Play…</string>
    <string name="duapps_ad_no_apps_refresh_button_text">REFRESH</string>
    <string name="duapps_ad_no_browser_play">No browser or Google Play installed</string>
    <string name="duapps_ad_nonetwork_message">Network error, please check your network and try again.</string>
    <string name="duapps_ad_pull_refresh">Pull To Refresh</string>
    <string name="duscenerysdk_ad_no_browser_play">No browser or Google Play installed</string>
    <string name="es_share_name_activity">Send by LAN</string>
    <string name="lock_screen_setting">Setting</string>
    <string name="lock_screen_switch">Smart Charge</string>
    <string name="lockscreen_charge_boost_time">Total charging accelerated by %1$d minutes</string>
    <string name="save_to_es">ES Save to...</string>
    <string name="scenery_card_antivirus_button">SECURITY SCAN</string>
    <string name="scenery_card_antivirus_content">Your phone has &lt;font color=#3080F0>%1$s&lt;/font> security risk(s)</string>
    <string name="scenery_card_antivirus_title">Security Risk</string>
    <string name="scenery_card_battery_button">SAVE POWER NOW</string>
    <string name="scenery_card_battery_content">&lt;font color=#3080F0>%1$s&lt;/font> power-using app(s) found. Use DU Battery Saver to save power and extend standby &lt;font color=#3080F0>%2$s h %3$s m&lt;/font></string>
    <string name="scenery_card_battery_title">Power Usage</string>
    <string name="scenery_card_booster_button">BOOST NOW</string>
    <string name="scenery_card_booster_content">&lt;font color=#3080F0>%1$s&lt;/font> stubborn apps are slowing your phone</string>
    <string name="scenery_card_booster_title">Running Slow</string>
    <string name="scenery_card_cleaner_button">FIX NOW</string>
    <string name="about">About</string>
    <string name="about_feedback">Feedback</string>
    <string name="about_more">More apps</string>
    <string name="action_backup">Backup</string>
    <string name="action_restore">Restore</string>
    <string name="app_download_manager">Download Manager</string>
    <string name="app_update">App update</string>
    <string name="app_update_setttings_title">Choose auto detect update apps</string>
    <string name="app_update_setttings_title_summary">Only in WLAN</string>
    <string name="category_apk">APP</string>
    <string name="category_file">File</string>
    <string name="clean_associated_folders_setting_summary">Clean associated folders when apps are removed</string>
    <string name="clean_associated_folders_setting_text">Clean associated folders after uninstallation</string>
    <string name="clear_cache_on_exit">Clear Cache on Exit</string>
    <string name="close_notification">Close notification</string>
    <string name="close_notification_summary">Close notification when the task is finished</string>
    <string name="copyright">© 2009-2015, ES APP Group</string>
    <string name="location_help">Help</string>
    <string name="location_history">History</string>
    <string name="official_website">Official website</string>
    <string name="open_app_permission_notification_summary">Notify after installing apps</string>
    <string name="open_app_permission_notification_title">Notify me of app permissions</string>
    <string name="others">Others</string>
    <string name="pref_show_history_folder_only">Show folders only in history</string>
    <string name="pref_show_history_folder_only_summary">"Don't show files in history"</string>
    <string name="preference_app_backup_dir">App backup directory</string>
    <string name="preference_auto_backup_text">Backup before uninstall</string>
    <string name="preference_auto_install_summary">install/uninstall programs automatically</string>
    <string name="preference_auto_install_text">(un)install apk automatically</string>
    <string name="preference_backup_app_cache_summary">Backup app data when backup app</string>
    <string name="preference_backup_app_cache_text">Backup data</string>
    <string name="preference_backup_settings_text">Backup settings</string>
    <string name="preference_cache_summary">Click to clear cached data (thumbnails etc.)</string>
    <string name="preference_cache_title">Clear cache</string>
    <string name="preference_clean_history_exit">Clean history on exit</string>
    <string name="preference_clean_prefer_summary">Clear the default app settings</string>
    <string name="preference_clean_prefer_title">Clear defaults</string>
    <string name="preference_cleanup_setting_text">Cleanup settings</string>
    <string name="preference_directory_setting_text">Directory settings</string>
    <string name="preference_display_setting_text">Display settings</string>
    <string name="preference_document_title">Document setting</string>
    <string name="preference_enable_remote_synchronizer_summary">Upload remote file automatically when it is edited locally by 3rd party app</string>
    <string name="preference_enable_remote_synchronizer_title">Enable remote synchronize</string>
    <string name="preference_file_text">FILE SETTINGS</string>
    <string name="preference_ftpsvr_account_change_title">Set manage account</string>
    <string name="preference_ftpsvr_auto_exit_text">Close on exit</string>
    <string name="preference_ftpsvr_charset_change_summary">"current charset: "</string>
    <string name="preference_ftpsvr_charset_change_title">Set charset</string>
    <string name="preference_ftpsvr_create_shortcut_summary">Create a shortcut to launch FTP server</string>
    <string name="preference_ftpsvr_create_shortcut_title">Create shortcut</string>
    <string name="preference_ftpsvr_port_title">Set port(1025 – 65534)</string>
    <string name="preference_ftpsvr_root_dir">Set root directory</string>
    <string name="preference_ftpsvr_root_dir_summary">Limit access to the dir</string>
    <string name="preference_hidden_file_summary">"Show files which start with '.'"</string>
    <string name="preference_hidden_file_title">Show hidden files</string>
    <string name="preference_ignore_inconsistent_sign_app">Ignore inconsistent signed App</string>
    <string name="preference_language_setting_summary">Select your language</string>
    <string name="preference_language_setting_title">Language settings</string>
    <string name="preference_net_passwd_change_summary">Change the password</string>
    <string name="preference_net_passwd_change_title">Change password</string>
    <string name="preference_net_passwd_summary">Turn on password to protect your network resources</string>
    <string name="preference_net_passwd_title">Turn on network protection</string>
    <string name="preference_protect_hided_dirfies_summary">Turn on password to protect your hide list resources</string>
    <string name="preference_protect_hided_dirfies_title">Hide list protection</string>
    <string name="preference_root_enhancement">ROOT ENHANCEMENT</string>
    <string name="preference_search_engine_title">Search engine setting</string>
    <string name="preference_security">SECURITY SETTINGS</string>
    <string name="preference_security_setting_text">Password settings</string>
    <string name="preference_setting_restore_summary">Restore settings</string>
    <string name="preference_show_disk_remain">Show low space warning</string>
    <string name="preference_show_disk_remain_summary">Show warning message if space is low after application is installed</string>
    <string name="preference_show_disk_usage">Show SD card size</string>
    <string name="preference_show_disk_usage_summary">Show sdcard size in History</string>
    <string name="preference_show_homepage_message_summary">Disable News Card of new functions in homepage</string>
    <string name="preference_show_homepage_message_title">Disable News Card</string>
    <string name="preference_show_pcs_drive_summary">Show netdisk in Home</string>
    <string name="preference_show_pcs_drive_title">Show netdisk</string>
    <string name="preference_show_scroll_thumb">Show scroll thumb</string>
    <string name="preference_show_scroll_thumb_summary">Show scroll thumb while long scrolling</string>
    <string name="preference_show_sdcard_notification_summary">Show SD card usage on status bar</string>
    <string name="preference_show_sdcard_notification_title">Show SD card on status bar</string>
    <string name="preference_show_select">Show the Select button</string>
    <string name="preference_show_select_summary">Show the Select button on the tool bar</string>
    <string name="preference_show_usb_prompt">USB plug-in message</string>
    <string name="preference_show_usb_prompt_summary">Show message when USB device is plugged in</string>
    <string name="preference_show_windows">Show the Windows button</string>
    <string name="preference_show_windows_summary">Show the Windows button on the tool bar</string>
    <string name="preference_start_protect_summary">Require a password to access ES File Explorer</string>
    <string name="preference_start_protect_title">App protection</string>
    <string name="preference_toolbar_setting_show_name_summary">Show the name on the toolbar</string>
    <string name="preference_toolbar_setting_show_name_title">Show icon labels on the toolbar</string>
    <string name="preference_tools">TOOLS SETTINGS</string>
    <string name="preference_update">SYSTEM SETTINGS</string>
    <string name="preference_update_summary">Update to current version</string>
    <string name="preference_upgrade_auto_check_summary">Check for new version according to the schedule</string>
    <string name="preference_upgrade_auto_check_title">Auto check</string>
    <string name="preference_upgrade_manual_check_summary">Check for new version manually</string>
    <string name="preference_upgrade_manual_check_title">Check now</string>
    <string name="preference_upgrade_settings_text">Update settings</string>
    <string name="preference_window_settings">Window settings</string>
    <string name="preference_xlarge_layout">Large Layout</string>
    <string name="preference_xlarge_layout_summary">Use large layout</string>
    <string name="privacy_statement">Privacy Policy</string>
    <string name="rate">Support us by rating this app</string>
    <string name="recycle_title">Recycle Bin</string>
    <string name="send_email_to_us">Send us an email</string>
    <string name="special_thanks_to_translators">Special thanks to translators</string>
    <string name="toolbar">Toolbar</string>
    <string name="version">Version</string>
</resources>