<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
  xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="@string/category_file" android:key="file">
        <CheckBoxPreference android:persistent="true" android:layout="@layout/tablet_preference" android:title="@string/preference_show_pcs_drive_title" android:key="show_pcs_drive" android:summary="@string/preference_show_pcs_drive_summary" android:widgetLayout="@layout/custom_preference_widget_checkbox" android:defaultValue="true" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/toolbar" android:key="toolbar">
        <CheckBoxPreference android:persistent="true" android:layout="@layout/tablet_preference" android:title="@string/preference_show_select" android:key="show_select_button" android:summary="@string/preference_show_select_summary" android:widgetLayout="@layout/custom_preference_widget_checkbox" />
        <CheckBoxPreference android:persistent="true" android:layout="@layout/tablet_preference" android:title="@string/preference_show_windows" android:key="show_windows_button" android:summary="@string/preference_show_windows_summary" android:widgetLayout="@layout/custom_preference_widget_checkbox" />
        <CheckBoxPreference android:persistent="true" android:layout="@layout/tablet_preference" android:title="@string/preference_toolbar_setting_show_name_title" android:key="toolbar_setting_show_name" android:summary="@string/preference_toolbar_setting_show_name_summary" android:widgetLayout="@layout/custom_preference_widget_checkbox" android:defaultValue="true" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/location_history" android:key="history">
        <CheckBoxPreference android:layout="@layout/tablet_preference" android:title="@string/pref_show_history_folder_only" android:key="history_dir_only" android:summary="@string/pref_show_history_folder_only_summary" android:widgetLayout="@layout/custom_preference_widget_checkbox" android:defaultValue="false" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/others" android:key="others">
        <CheckBoxPreference android:persistent="true" android:layout="@layout/tablet_preference" android:title="@string/preference_xlarge_layout" android:key="use_xlarge_layout" android:summary="@string/preference_xlarge_layout_summary" android:widgetLayout="@layout/custom_preference_widget_checkbox" android:defaultValue="false" />
        <CheckBoxPreference android:persistent="true" android:layout="@layout/tablet_preference" android:title="@string/preference_show_sdcard_notification_title" android:key="show_sdcard_notification" android:summary="@string/preference_show_sdcard_notification_summary" android:widgetLayout="@layout/custom_preference_widget_checkbox" android:defaultValue="false" />
        <CheckBoxPreference android:persistent="true" android:layout="@layout/tablet_preference" android:title="@string/preference_hidden_file_title" android:key="hidden_file" android:summary="@string/preference_hidden_file_summary" android:widgetLayout="@layout/custom_preference_widget_checkbox" android:defaultValue="false" />
        <CheckBoxPreference android:persistent="true" android:layout="@layout/tablet_preference" android:title="@string/preference_show_scroll_thumb" android:key="scroll_thumb" android:summary="@string/preference_show_scroll_thumb_summary" android:widgetLayout="@layout/custom_preference_widget_checkbox" android:defaultValue="true" />
        <CheckBoxPreference android:persistent="true" android:layout="@layout/tablet_preference" android:title="@string/preference_show_disk_usage" android:key="show_disk_usage" android:summary="@string/preference_show_disk_usage_summary" android:widgetLayout="@layout/custom_preference_widget_checkbox" android:defaultValue="true" />
        <CheckBoxPreference android:persistent="true" android:layout="@layout/tablet_preference" android:title="@string/preference_show_disk_remain" android:key="show_disk_remain" android:summary="@string/preference_show_disk_remain_summary" android:widgetLayout="@layout/custom_preference_widget_checkbox" android:defaultValue="true" />
        <CheckBoxPreference android:persistent="true" android:layout="@layout/tablet_preference" android:title="@string/preference_show_usb_prompt" android:key="show_usb_prompt" android:summary="@string/preference_show_usb_prompt_summary" android:widgetLayout="@layout/custom_preference_widget_checkbox" android:defaultValue="true" />
        <CheckBoxPreference android:persistent="true" android:layout="@layout/tablet_preference" android:title="@string/preference_show_homepage_message_title" android:key="show_homepage_message" android:summary="@string/preference_show_homepage_message_summary" android:widgetLayout="@layout/custom_preference_widget_checkbox" android:defaultValue="false" />
        <com.estrongs.android.ui.preference.ListPreference android:persistent="true" android:entries="@array/preference_language_setting_entries" android:layout="@layout/tablet_preference" android:title="@string/preference_language_setting_title" android:key="language_setting" android:summary="@string/preference_language_setting_summary" android:widgetLayout="@layout/custom_preference_widget_dialog" android:defaultValue="-1" android:dialogTitle="@string/preference_language_setting_title" android:entryValues="@array/preference_language_setting_values" />
    </PreferenceCategory>
</PreferenceScreen>