<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
  xmlns:android="http://schemas.android.com/apk/res/android">
    <CheckBoxPreference android:persistent="true" android:layout="@layout/tablet_preference" android:title="@string/preference_start_protect_title" android:key="start_passwd_enable" android:summary="@string/preference_start_protect_summary" android:widgetLayout="@layout/custom_preference_widget_checkbox" android:defaultValue="false" />
    <CheckBoxPreference android:persistent="true" android:layout="@layout/tablet_preference" android:title="@string/preference_net_passwd_title" android:key="net_passwd_enable" android:summary="@string/preference_net_passwd_summary" android:widgetLayout="@layout/custom_preference_widget_checkbox" android:defaultValue="false" />
    <CheckBoxPreference android:persistent="true" android:layout="@layout/tablet_preference" android:title="@string/preference_protect_hided_dirfies_title" android:key="hided_dirfiles_passwd_enable" android:summary="@string/preference_protect_hided_dirfies_summary" android:widgetLayout="@layout/custom_preference_widget_checkbox" android:defaultValue="false" />
    <Preference android:persistent="true" android:layout="@layout/tablet_preference" android:title="@string/preference_net_passwd_change_title" android:key="net_passwd_change" android:summary="@string/preference_net_passwd_change_summary" />
</PreferenceScreen>