<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
  xmlns:android="http://schemas.android.com/apk/res/android">
    <CheckBoxPreference android:persistent="true" android:layout="@layout/custom_preference" android:title="@string/preference_ftpsvr_auto_exit_text" android:key="ftpsvr_auto_exit" android:widgetLayout="@layout/custom_preference_widget_checkbox" android:defaultValue="true" />
    <com.estrongs.android.ui.preference.CustomEditTextPreference android:persistent="false" android:layout="@layout/custom_preference" android:singleLine="true" android:title="@string/preference_ftpsvr_port_title" android:key="ftpsvr_port" android:widgetLayout="@layout/custom_preference_widget_dialog" android:dialogTitle="@string/preference_ftpsvr_port_title" />
    <com.estrongs.android.ui.preference.DirChoosePreference android:persistent="false" android:layout="@layout/custom_preference" android:singleLine="true" android:title="@string/preference_ftpsvr_root_dir" android:key="ftpsvr_root_dir" android:summary="@string/preference_ftpsvr_root_dir_summary" android:widgetLayout="@layout/custom_preference_widget_dialog" android:dialogTitle="@string/preference_ftpsvr_root_dir" />
    <Preference android:persistent="false" android:layout="@layout/custom_preference" android:singleLine="true" android:title="@string/preference_ftpsvr_account_change_title" android:key="ftpsvr_account_change" android:widgetLayout="@layout/custom_preference_widget_dialog" android:dialogTitle="@string/preference_ftpsvr_account_change_title" />
    <Preference android:persistent="false" android:layout="@layout/custom_preference" android:singleLine="true" android:title="@string/preference_ftpsvr_charset_change_title" android:key="ftpsvr_charset_change" android:summary="@string/preference_ftpsvr_charset_change_summary" android:widgetLayout="@layout/custom_preference_widget_dialog" android:dialogTitle="@string/preference_ftpsvr_charset_change_title" />
    <Preference android:persistent="false" android:layout="@layout/custom_preference" android:singleLine="true" android:title="@string/preference_ftpsvr_create_shortcut_title" android:key="ftpsvr_create_shortcut" android:summary="@string/preference_ftpsvr_create_shortcut_summary" android:widgetLayout="@layout/custom_preference_widget_dialog" android:dialogTitle="@string/preference_ftpsvr_create_shortcut_title" />
</PreferenceScreen>